# work_logger

./: .gitignore  .gitingore  README.md  pyproject.toml
back_end/: .coverage  pyproject.toml  pytest.ini
back_end/mysite/: .coverage
back_end/mysite/api/: permissions.py  serializers.py  urls.py  views.py
back_end/mysite/mysite/: settings.py  urls.py
back_end/mysite/mysite/templates/: base.html
back_end/mysite/mysite/templates/registration/: login.html
back_end/mysite/work_tracker/: apps.py  models.py  urls.py  views.py
back_end/mysite/work_tracker/scripts/: delete_all_time_sheet.py
back_end/mysite/work_tracker/static/js/: main.js
back_end/mysite/work_tracker/templates/: readme.txt
back_end/mysite/work_tracker/templates/work_tracker/: time_entry_form.html  (+2 more)
mysite/: db.sqlite3
mysite/api/: urls.py
mysite/mysite/: secrets.py  settings.py  urls.py
mysite/mysite/templates/: base.html
mysite/work_tracker/: MOCK_DATA.json  admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/work_tracker/migrations/: 0001_initial.py  0002_alter_timesheet_job.py  0002_auto_20210427_2253.py
mysite/work_tracker/scripts/: pop_db.py
mysite/work_tracker/static/css/: form.css  job_list.css  style.css
mysite/work_tracker/templates/: base.html
mysite/work_tracker/templates/work_tracker/: base.html  entry_detail.htm  entry_detail.html  index.html  job_detail.htm  job_detail.html  job_list.html  time_entry_form.htm  time_entry_form.html  time_entry_list.html  time_sheet_list.html  timeentry_confirm_delete.html
mysite/work_tracker/tests/: test_models.py
