[tool.poetry]
name = "work_logger"
version = "0.1.0"
description = ""
authors = ["Ryan Doan"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-extensions = "^3.1.3"



[tool.poetry.dev-dependencies]
black = "^21.4b1"
flake8 = "^3.9.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
